--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "@nestjs/schematics": "^11.0.0",
         "@nestjs/testing": "^11.0.1",
         "@swc/cli": "^0.6.0",
-        "@swc/core": "^1.10.7",
+        "@swc/core": "^1.11.10",
+        "@swc/jest": "^0.2.37",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.10.7",
@@ -62,7 +63,7 @@
         "rootDir": "src",
         "testRegex": ".*\\.spec\\.ts$",
         "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
+            "^.+\\.(t|j)s$": ["@swc/jest"]
         },
         "collectCoverageFrom": [
             "**/*.(t|j)s"
