--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "@nestjs/common": "^11.0.1",
         "@nestjs/core": "^11.0.1",
         "@nestjs/platform-express": "^11.0.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
         "nestjs-pino": "^4.3.1",
         "pino-http": "^10.4.0",
         "pino-pretty": "^13.0.0",
