--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "NODE_ENV=production node dist/main",
-        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+        "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "vitest run",
         "test:watch": "vitest",
         "test:cov": "vitest run --coverage",
@@ -20,65 +21,42 @@
         "test:e2e": "vitest run --config ./vitest.config.e2e.mts"
     },
     "dependencies": {
-        "@nestjs/common": "^11.0.1",
-        "@nestjs/core": "^11.0.1",
-        "@nestjs/platform-express": "^11.0.1",
+        "@nestjs/common": "^11.0.11",
+        "@nestjs/core": "^11.0.11",
+        "@nestjs/platform-express": "^11.0.11",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "nestjs-pino": "^4.3.1",
         "pino-http": "^10.4.0",
         "pino-pretty": "^13.0.0",
         "reflect-metadata": "^0.2.2",
-        "rxjs": "^7.8.1"
+        "rxjs": "^7.8.2"
     },
     "devDependencies": {
-        "@eslint/eslintrc": "^3.2.0",
-        "@eslint/js": "^9.18.0",
-        "@nestjs/cli": "^11.0.0",
-        "@nestjs/schematics": "^11.0.0",
-        "@nestjs/testing": "^11.0.1",
+        "@eslint/eslintrc": "^3.3.0",
+        "@eslint/js": "^9.22.0",
+        "@nestjs/cli": "^11.0.5",
+        "@nestjs/schematics": "^11.0.2",
+        "@nestjs/testing": "^11.0.11",
         "@swc/cli": "^0.6.0",
-        "@swc/core": "^1.11.10",
+        "@swc/core": "^1.11.11",
         "@swc/jest": "^0.2.37",
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
-        "@types/node": "^22.10.7",
+        "@types/node": "^22.13.10",
         "@types/supertest": "^6.0.2",
-        "@vitest/coverage-v8": "^3.0.8",
-        "eslint": "^9.18.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.2",
+        "@vitest/coverage-v8": "^3.0.9",
+        "eslint": "^9.22.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-prettier": "^5.2.3",
         "globals": "^16.0.0",
-        "jest": "^29.7.0",
-        "prettier": "^3.4.2",
+        "prettier": "^3.5.3",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
-        "ts-jest": "^29.2.5",
-        "ts-loader": "^9.5.2",
-        "ts-node": "^10.9.2",
         "tsconfig-paths": "^4.2.0",
-        "typescript": "^5.7.3",
-        "typescript-eslint": "^8.20.0",
+        "typescript": "^5.8.2",
+        "typescript-eslint": "^8.26.1",
         "unplugin-swc": "^1.5.1",
-        "vitest": "^3.0.8"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".*\\.spec\\.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": [
-                "@swc/jest"
-            ]
-        },
-        "collectCoverageFrom": [
-            "**/*.(t|j)s"
-        ],
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
+        "vitest": "^3.0.9"
     }
 }
