--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "scripts": {
         "build": "nest build",
         "format": "prettier --write \"**/*.{json,ts,js,mjs,md}\"",
-        "start": "nest start",
-        "start:dev": "nest start --watch",
-        "start:debug": "nest start --debug --watch",
+        "start": "NODE_ENV=development nest start",
+        "start:dev": "NODE_ENV=development nest start --watch",
+        "start:debug": "NODE_ENV=development nest start --debug --watch",
         "start:prod": "NODE_ENV=production node dist/main",
         "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
         "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -22,10 +22,12 @@
     },
     "dependencies": {
         "@nestjs/common": "^11.0.11",
+        "@nestjs/config": "^4.0.1",
         "@nestjs/core": "^11.0.11",
         "@nestjs/platform-express": "^11.0.11",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "joi": "^17.13.3",
         "nestjs-pino": "^4.3.1",
         "pino-http": "^10.4.0",
         "pino-pretty": "^13.0.0",
