--- a/.swcrc
+++ b/.swcrc
@@ -14,8 +14,7 @@
         },
         "baseUrl": "./",
         "paths": {
-            "@src/*": ["./src/*"],
-            "@test/*": ["./test/*"]
+            "@src/*": ["./src/*"]
         }
     },
     "minify": false
