--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
         "strictBindCallApply": false,
         "noFallthroughCasesInSwitch": false,
         "paths": {
-            "@src/*": ["./src/*"],
-            "@test/*": ["./test/*"]
+            "@src/*": ["./src/*"]
         }
     }
 }
