--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
         "strictBindCallApply": false,
         "noFallthroughCasesInSwitch": false,
         "paths": {
-            "@src/*": ["./src/*"]
+            "@_common/*": ["./src/_common/*"],
+            "@_config/*": ["./src/_config/*"],
+            "@_app/*": ["./src/_app/*"],
+            "@auth/*": ["./src/auth/*"],
+            "@root/*": ["./src/root/*"]
         }
     }
 }
