--- a/src/_config/.env.test
+++ b/src/_config/.env.test
@@ -5,3 +5,8 @@ DATABASE_PASSWORD=postgres
 DATABASE_NAME=postgres
 DATABASE_SYNCHRONIZE=true
 DATABASE_LOGGING=false
+
+JWT_SECRET=gyfsu8-muwdIw-dijbam
+JWT_EXPIRES_IN=1h
+
+PINO_LOG_LEVEL=fatal
