--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@nestjs/common": "^11.0.11",
         "@nestjs/config": "^4.0.1",
         "@nestjs/core": "^11.0.11",
+        "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^11.0.11",
         "@nestjs/typeorm": "^11.0.0",
