--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
         "@nestjs/core": "^11.0.11",
         "@nestjs/jwt": "^11.0.0",
         "@nestjs/mapped-types": "*",
+        "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^11.0.11",
         "@nestjs/typeorm": "^11.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "joi": "^17.13.3",
         "nestjs-pino": "^4.3.1",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "pg": "^8.14.1",
         "pino-http": "^10.4.0",
         "pino-pretty": "^13.0.0",
@@ -51,6 +54,7 @@
         "@types/express": "^5.0.0",
         "@types/jest": "^29.5.14",
         "@types/node": "^22.13.10",
+        "@types/passport-jwt": "^4.0.1",
         "@types/supertest": "^6.0.2",
         "@vitest/coverage-v8": "^3.0.9",
         "eslint": "^9.22.0",
