--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
             "@_config/*": ["./src/_config/*"],
             "@_app/*": ["./src/_app/*"],
             "@auth/*": ["./src/auth/*"],
+            "@users/*": ["./src/users/*"],
             "@root/*": ["./src/root/*"]
         }
     }
